--- a/css/style.css
+++ b/css/style.css
@@ -188,3 +188,6 @@ header nav ul li:last-of-type a{
     height: 32px;
     content: url("../images/btn_dot.svg");
 }
+.mike{
+    display: none;
+}
