--- a/css/style.css
+++ b/css/style.css
@@ -188,3 +188,93 @@ header nav ul li:last-of-type a{
     height: 32px;
     content: url("../images/btn_dot.svg");
 }
+
+.what_we_do{
+    padding-top: 112px;
+    padding-bottom: 100px;
+    background-color: #000;
+}
+.what_we_do .container{
+    max-width: 1168px;
+}
+.what_we_do h2{
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 42px;
+    text-align: center;
+    color: #FFFFFF;
+    margin-bottom: 15px;
+}
+.what_we_do h3{
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 23px;
+    line-height: 30px;
+    text-align: center;
+    color: #C0C0C0;
+    margin-bottom: 42px;
+}
+.d_flex_container{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.what_we_do .d_flex_container article{
+    max-width: 576px;
+    position: relative;
+    margin-bottom: 16px;
+}
+.what_we_do .d_flex_container article img{
+    display: block;
+    width: 100%;
+}
+.what_we_do .d_flex_container article .description{
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    padding: 30px 45px 30px 30px;
+    box-sizing: border-box;
+}
+.what_we_do .d_flex_container article .description h4{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    margin-bottom: 15px;
+}
+.what_we_do .d_flex_container article .description p{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #C0C0C0;
+    margin-bottom: 20px;
+}
+.what_we_do .d_flex_container article .description a{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    letter-spacing: 0.4px;
+    background: #FFF;
+    color: #000;
+    text-decoration: none;
+    border-radius: 14px;
+    padding: 5px 10px 5px 4px;
+    display: inline-flex;
+    align-items: center;
+}
+.what_we_do .d_flex_container article .description a:before{
+    padding-right: 6px;
+    width: 32px;
+    height: 32px;
+    content: url("../images/btn_dot.svg");
