ht.12.jan.adaptive

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,10 @@ header .container{
     justify-content: space-between;
     align-items: center;
 }
+.menu_bar{
+    height: 30px;
+    display: none;
+}
 header nav a{
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
