--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ header nav li{
     transition: 0.4s;
 }
 header nav li:hover{
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 header nav ul li:first-of-type a{
     font-size: 13px;
@@ -570,4 +570,47 @@ footer{
     top: 0;
     width: 50%;
     height: 100%;
+}
+
+.ui-widget-content {
+    border: 1px solid rgba(221, 221, 221, 0.75);
+    background: none;
+    color: #FFFFFF;
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    text-align: left;
+    border-radius: 14px;
+    backdrop-filter: blur(15px);
+}
+.ui-widget-header{
+    font-family: 'Poppins', sans-serif;
+    border: none;
+    background: none;
+    color: #FFFFFF;
+    font-size: 16px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.75);
+    border-radius: 0;
+}
+.ui-button .ui-icon {
+    background-image: none;
+}
+.ui-dialog .ui-dialog-titlebar-close {
+    position: absolute;
+    right: 0.3em;
+    top: 50%;
+    border-radius: 50%;
+    border: 1px solid rgba(255, 255, 255, 0.75);
+    background-color: rgba(24, 24, 24, 0.5);
+    width: 20px;
+    margin: -10px 0 0 0;
+    padding: 1px;
+    height: 20px;
+    transition: ease-in-out 0.3s;
+}
+.ui-dialog .ui-dialog-titlebar-close:hover{
+    background-color: rgb(209, 154, 102);
+}
+.ui-icon-closethick{
+    background-image: none;
+    background-position-x: 55px;
 }
